
Changes from December 5, 2009

- [NEW] TTDCONDITIONLOG added to TTDebug.h

- [NEW] TTDPRINTMETHODNAME added to TTDebug.h

- [NEW] -[NSString versionStringCompare:]

- [NEW] charsetForMultipart added to TTURLRequest

- [FIXED] Table view delete-row animation slides to left, not up

- [FIXED] Potentially uninitialized variable in NSStringAdditions

- [FIXED] Layout problems in TTTextEditor

- [FIXED] github#109 TTScrollView bug: displaying landscape views in
          landscape orientation have a wrong size

- [MINOR] Stylistic consistency changes

- [MINOR] Duplicate TTIsEmptyArray in TTGlobal.h now TTIsEmptySet

- [MINOR] Reset TTTableMessageItemCell properties when preparing for reuse

- [MINOR] Fix potential crash when asking for a nonexistent
          previousViewController

- [MINOR] Use the same bytes per row in the destination bitmap for
          transformWidth


Changes from November 27, 2009

- [NEW] loadSynchronous added to TTURLRequest.

- [NEW] TTHighlightBorderStyle New border style with a highlight.
	http://three20.info/api/TTStyle#TTHighlightBorderStyle

- [NEW] TTReflectiveFillStyle styleWithColor:withBottomHighlight:next:
        http://three20.info/api/TTStyle#styleWithColor:withBottomHighlight:next:

- [FIXED] TTReflectiveFillStyle's rendering algorithm now works without magic
          numbers.

- [FIXED] github#108 Show the proper accessoryType for shared URLs.

- [FIXED] github#107 Check for known URL schemes case-insensitively.

- [FIXED] github#106 Update the README to reference the new repo location.

- [FIXED] github#104 Properly show TTTabStrip left/right images.

- [FIXED] github#78 In TTScrollView notify the delegate when the page has
          changed.

Changes from November 19, 2009

- [FIXED] Revert to previous TTIsKeyboardVisible() check

- [FIXED] Zero no longer signifies "cached object never expires"


Changes from November 17, 2009

- [NEW] TTD* logging macros. See TTDebug.h for info.
