@@ -61,6 +61,11 @@
 - (NSString*)formatRelativeTime;
 
 /**
+ * Formats dates within 1 week like '5m' or '2d', or calls formatShortTime if older.
+ */
+- (NSString*)formatShortRelativeTime;
+
+/**
  * Formats the date with 'MMMM d", "Today", or "Yesterday".
  *
  * You must supply date components for today and yesterday because they are relatively expensive
