@@ -1,3 +1,6 @@
+Changes from December 11, 2009
+
+- [NEW] -[NSDate formatShortRelativeTime]
 
 Changes from December 5, 2009
 
